--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .background video{
     height: 100%;
     width: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     object-fit: cover;
